cmake_minimum_required(VERSION 2.8)

project(leetcode)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(leetcode quickSort/qSort.cpp NumberOfWaysToSplitString/NumberOfWaysToSplitString.cpp "MatrixCellsInDistanceOrder/MatrixCellsInDistanceOrder.cpp .cpp" UniqueEmailAddresses/UniqueEmailAddresses.cpp ValidPerfectSquare/ValidPerfectSquare.cpp TimeNeededToInformAllEmployees/TimeNeededToInformAllEmployees.cpp ShortEncodingOfWords/ShortEncodingOfWords.cpp targetSum/targetSum.cpp FindTheWinnerOfAnArrayGame/FindTheWinnerOfAnArrayGame.cpp MaximumProductOfTwoElementsInAnArray/MaximumProductOfTwoElementsInAnArray.cpp MakeTwoArraysEqualByReversingSubArrays/MakeTwoArraysEqualByReversingSubArrays.cpp ThreeConsecutiveOdds/ThreeConsecutiveOdds.cpp MinimumOperationsToMakeArrayEqual/MinimumOperationsToMakeArrayEqual.cpp NumberOfSubstringsWithOnly1s/NumberOfSubstringsWithOnly1s.cpp ThousandSeparator/ThousandSeparator.cpp)